force-app/main/default/objects/Offer_Product__c/Offer_Product__c.object-meta.xml
<CustomObject>
    <label>Offer Product</label>
    <nameField>
        <label>Offer Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>