force-app/main/default/objects/Offer_Product__c/fields/Activation_Fee__c.field-meta.xml
<CustomField>
        <fullName>Activation_Fee__c</fullName>
        <label>Activation Fee</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>