force-app/main/default/objects/Offer_Product__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <formula>Per_Copy__c *  Number_of_totals_day__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>