force-app/main/default/objects/Offer_Product__c/fields/AmountforRollup__c.field-meta.xml
<CustomField>
        <fullName>AmountforRollup__c</fullName>
        <description>This field is used to rollup the amount</description>
        <label>AmountforRollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>