force-app/main/default/objects/Offer_Product__c/fields/Code__c.field-meta.xml
<CustomField>
        <fullName>Code__c</fullName>
        <formula>Product__r.ProductCode</formula>
        <label>Code</label>
        <type>Text</type>
    </CustomField>