force-app/main/default/objects/Offer_Product__c/fields/DSI_Id__c.field-meta.xml
<CustomField>
        <fullName>DSI_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>DSI Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>