force-app/main/default/objects/Offer_Product__c/fields/Frequency_Code__c.field-meta.xml
<CustomField>
        <fullName>Frequency_Code__c</fullName>
        <formula>IF( Monday__c = true &amp;&amp; Tuesday__c = true &amp;&amp; Wednesday__c = true &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "7 Day Delivery (Monday-Sunday)",

If(Monday__c = true &amp;&amp; Tuesday__c = true &amp;&amp; Wednesday__c = true &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true, "Monday-Friday Delivery",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = false &amp;&amp; Friday__c = false &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "Saturday-Sunday Delivery",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = false &amp;&amp; Friday__c = false &amp;&amp; Saturday__c = false &amp;&amp; Sunday__c = true, "Sunday Only Delivery",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "Thursday-Sunday delivery","N/A" )
)
)))</formula>
        <label>Frequency Code</label>
        <type>Text</type>
    </CustomField>