force-app/main/default/objects/Offer_Product__c/fields/Is_Activation_Fee__c.field-meta.xml
<CustomField>
        <fullName>Is_Activation_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Activation Fee</label>
        <type>Checkbox</type>
    </CustomField>