force-app/main/default/objects/Offer_Product__c/fields/Is_Digital__c.field-meta.xml
<CustomField>
        <fullName>Is_Digital__c</fullName>
        <formula>Product__r.IsDigital__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Digital</label>
        <type>Checkbox</type>
    </CustomField>