force-app/main/default/objects/Offer_Product__c/fields/Number_of_Days_per_week__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Days_per_week__c</fullName>
        <formula>IF(Monday__c, 1, 0) +
			IF(Tuesday__c, 1, 0) +
			IF(Wednesday__c, 1, 0) +
			IF(Thursday__c, 1, 0)+
			IF(Friday__c, 1, 0)+
			IF(Saturday__c, 1, 0)</formula>
        <label>Number of Days per week</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>