force-app/main/default/objects/Offer_Product__c/fields/Number_of_totals_day__c.field-meta.xml
<CustomField>
        <fullName>Number_of_totals_day__c</fullName>
        <formula>Term__c * Number_of_Days_per_week__c</formula>
        <label>Total days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>