force-app/main/default/objects/Offer_Product__c/fields/Number_of_Weeks__c.field-meta.xml
<CustomField>
        <fullName>Number_of_Weeks__c</fullName>
        <label>Number of Weeks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>