force-app/main/default/objects/Offer_Product__c/fields/Offer__c.field-meta.xml
<CustomField>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offer Products</relationshipLabel>
        <relationshipName>Offer_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>