force-app/main/default/objects/Offer_Product__c/fields/Per_Copy_Sunday__c.field-meta.xml
<CustomField>
        <fullName>Per_Copy_Sunday__c</fullName>
        <label>Per Copy Sunday</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>