force-app/main/default/objects/Offer_Product__c/fields/Per_Week__c.field-meta.xml
<CustomField>
        <fullName>Per_Week__c</fullName>
        <formula>(Amount__c + Sunday_Amount__c)/Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Per Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>