force-app/main/default/objects/Offer_Product__c/fields/Product__c.field-meta.xml
<CustomField>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Offer Products</relationshipLabel>
        <relationshipName>Offer_Products</relationshipName>
        <type>Lookup</type>
    </CustomField>