force-app/main/default/objects/Offer_Product__c/fields/Product_Abbreviation__c.field-meta.xml
<CustomField>
        <fullName>Product_Abbreviation__c</fullName>
        <formula>IF
(Is_Digital__c = FALSE,
Product__r.ProductCode&amp;"_"&amp;Schedule_Code__c,
Product__r.ProductCode)</formula>
        <label>Product Abbreviation</label>
        <type>Text</type>
    </CustomField>