force-app/main/default/objects/Offer_Product__c/fields/Schedule_Code__c.field-meta.xml
<CustomField>
        <fullName>Schedule_Code__c</fullName>
        <formula>IF(  Monday__c  = true &amp;&amp; Tuesday__c = true &amp;&amp; Wednesday__c = true &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "DS",

If(Monday__c = true &amp;&amp; Tuesday__c = true &amp;&amp; Wednesday__c = true &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true, "DF",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = false &amp;&amp; Friday__c = false &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "SS",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = false &amp;&amp; Friday__c = false &amp;&amp; Saturday__c = false &amp;&amp; Sunday__c = true, "SO",

If(Monday__c = false &amp;&amp; Tuesday__c = false &amp;&amp; Wednesday__c = false &amp;&amp; Thursday__c = true &amp;&amp; Friday__c = true &amp;&amp; Saturday__c = true &amp;&amp; Sunday__c = true, "RS","" )
)
)))</formula>
        <label>Schedule Code</label>
        <type>Text</type>
    </CustomField>