force-app/main/default/objects/Offer_Product__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
        <fullName>Sort_Order__c</fullName>
        <formula>Product__r.DSI_Id__c</formula>
        <label>Sort Order</label>
        <type>Text</type>
    </CustomField>