force-app/main/default/objects/Offer_Product__c/fields/Sunday__c.field-meta.xml
<CustomField>
        <fullName>Sunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </CustomField>