force-app/main/default/objects/Offer_Product__c/fields/Sunday_Amount__c.field-meta.xml
<CustomField>
        <fullName>Sunday_Amount__c</fullName>
        <formula>Per_Copy_Sunday__c * Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sunday Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>