force-app/main/default/objects/Offer_Product__c/fields/SundayAmountRollup__c.field-meta.xml
<CustomField>
        <fullName>SundayAmountRollup__c</fullName>
        <description>This field is used to rollup the Sunday Amount</description>
        <label>SundayAmountRollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>