force-app/main/default/objects/Offer_Product__c/fields/Term__c.field-meta.xml
<CustomField>
        <fullName>Term__c</fullName>
        <formula>Offer__r.Number_of_Weeks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term (weeks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>