force-app/main/default/objects/Offer_Product__c/fields/Thursday__c.field-meta.xml
<CustomField>
        <fullName>Thursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </CustomField>