force-app/main/default/objects/Offer_Product__c/fields/Total_Amount_for_Rollup__c.field-meta.xml
<CustomField>
        <fullName>Total_Amount_for_Rollup__c</fullName>
        <description>this field is populated by a workflow field update to equal the total amount formula field</description>
        <label>Total Amount for Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>