force-app/main/default/objects/Offer_Product__c/fields/Tuesday__c.field-meta.xml
<CustomField>
        <fullName>Tuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </CustomField>