force-app/main/default/objects/Offer_Product__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Activation_Fee__c</columns>
        <columns>Amount__c</columns>
        <columns>AmountforRollup__c</columns>
        <columns>Code__c</columns>
        <columns>DSI_Id__c</columns>
        <columns>Friday__c</columns>
        <columns>Is_Activation_Fee__c</columns>
        <columns>Is_Digital__c</columns>
        <columns>Monday__c</columns>
        <columns>Number_of_Days_per_week__c</columns>
        <columns>Number_of_Weeks__c</columns>
        <columns>Offer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>